基础：第三章节，完成渲染进程与主进程通信

--- a/section_3/index.html
+++ b/section_3/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>111houdunren.com</h1>
+    <button id="btn">向主进程发送消息</button>
     <script src="renderer.js"></script>
   </body>
 </html>
