基础：第三章节，创建菜单体验主进程向渲染进程通信

--- a/section_3/index.html
+++ b/section_3/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1>111houdunren.com</h1>
     <button id="btn">向主进程发送消息</button>
+    <div id="node"></div>
+    <div id="chrome"></div>
+    <div id="electron"></div>
     <script src="renderer.js"></script>
   </body>
 </html>
