--- a/section_3/index.html
+++ b/section_3/index.html
@@ -12,6 +12,7 @@
     <div id="node"></div>
     <div id="chrome"></div>
     <div id="electron"></div>
+    <div id="send">向主进程发送消息22222</div>
     <script src="renderer.js"></script>
   </body>
 </html>
