基础：第三章节，双向通信，使用invoke和handle的方式，便捷。

--- a/section_3/index.html
+++ b/section_3/index.html
@@ -12,7 +12,7 @@
     <div id="node"></div>
     <div id="chrome"></div>
     <div id="electron"></div>
-    <div id="send">向主进程发送消息22222</div>
+    <button id="upload">上传文件</button>
     <script src="renderer.js"></script>
   </body>
 </html>
