基础：第三章节，双向通信，使用invoke和handle的方式，渲染进程向主进程传递参数。

--- a/section_3/index.html
+++ b/section_3/index.html
@@ -13,6 +13,9 @@
     <div id="chrome"></div>
     <div id="electron"></div>
     <button id="upload">上传文件</button>
+    <div></div>
+    <input type="text"/>
+    <button id="setTitle">设置标题</button>
     <script src="renderer.js"></script>
   </body>
 </html>
