基础：第四章，使用screen模块，动态控制窗口居中。

--- a/section_4/index.html
+++ b/section_4/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>112334324</h1>
+    宽度： <input type="text" name="width" id="">
+    高度： <input type="text" name="height" id="">
+    <button id="btn">修改尺寸</button>
     <script src="renderer.js"></script>
   </body>
 </html>
