基础：第六章，完成在主进程选择文件。

--- a/section_5/index.html
+++ b/section_5/index.html
@@ -7,7 +7,8 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' *.trusted.com; script-src '*.houdunren.com'" /> -->
   </head>
   <body>
-    <div>abc</div>
+    <button id="selectBtn">选择文件</button>
+    <div id="container"></div>
     <script src="renderer.js"></script>
   </body>
 </html>
