基础：第六章，使用showSaveDialog保存文件。

--- a/section_5/index.html
+++ b/section_5/index.html
@@ -7,6 +7,10 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' *.trusted.com; script-src '*.houdunren.com'" /> -->
   </head>
   <body>
+    <textarea
+    id="txt"
+    ></textarea>
+    <button id="saveBtn">保存文件</button>
     <button id="selectBtn">选择文件</button>
     <div id="container"></div>
     <script src="renderer.js"></script>
