基础：第六章，使用setWindowOpenHandler监听打开窗口跳转链接。

--- a/section_5/index.html
+++ b/section_5/index.html
@@ -13,6 +13,7 @@
     <button id="saveBtn">保存文件</button>
     <button id="selectBtn">选择文件</button>
     <div id="container"></div>
+    <a href="http://www.baidu.com" target="_blank">在默认浏览器打开百度</a>
     <script src="renderer.js"></script>
   </body>
 </html>
